--- a/index.html
+++ b/index.html
@@ -116,56 +116,13 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 	</header>
 
 	<!-- Main Content -->
-	<main>
-		<section id="about" class="section-padding">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-					<h2About</h2>
-<p class="lead">In terms of my professional summary, I am an optimistic and results-driven leader, actively seeking a challenging role where I can create a significant, positive impact. Throughout my career, I have honed my skills in customer/client resolutions, fast-paced managerial environments, meeting tight deadlines, and effective communication strategies. With 15 years of call center experience and 17 years in the financial services industry, I bring a wealth of knowledge and expertise to the table.I have pursued a robust academic journey to complement my professional experience. Currently, I am pursuing a Doctor of Business Administration degree from Apollos University, with an anticipated graduation date in August 2023. My coursework has encompassed a diverse range of subjects, including Survey of American Business and Its Leaders, Corporate Managerial Finance and Accounting, Ethical Leadership, Fundamentals of Business Research, Survey of Global Business Opportunities and Issues, Leadership: Concepts and Theories, Topics in Human Resource Management, Organizational and Group Dynamics, and Corporate Strategic Planning.</p>
-
-<p>Moreover, I hold a Master of Business Administration degree, which I obtained in July 2018 from Western Governors University. During this program, I excelled in Financial Management and Operations Management, achieving the 96th percentile in the Capsim Simulation. Furthermore, I completed a Master of Science in Management and Leadership in December 2017, specializing in various aspects of business, such as Business Acumen, Managing Organizations & Leading People, Managing Human Capital, Change Management & Innovation, Strategic Management, Becoming an Effective Leader, Leading Teams, Management Communication, Data-Driven Decision Making, and Ethical Leadership.Beyond my professional experience, I have also cultivated relevant expertise in the realm of financial investing. As a self-managed landlord, I have achieved a remarkable cash-on-cash return rate of over 20% per year. Additionally, my venture investments have yielded an annual return of 7.7%, compounded monthly. As a peer-to-peer lender, I have successfully mitigated risks in my loan portfolio, resulting in a solid return on investment of 5%. Furthermore, my passion for the stock market has driven me to excel in fundamental company analysis and technical chart analysis, with my best one-year growth rate surpassing 300%.</p>
-
-<p>Community involvement and giving back are essential to me. As a Success Networking Team Facilitator for the NSLS WGU Alumni Chapter, I have contributed to the growth and support of fellow professionals. Moreover, I served as a Den Leader and Committee Member for a Scouts BSA Pack, fostering character development and leadership skills among young individuals.</p>
-
-<p>I believe in the power of continuous learning and personal growth, and I am committed to helping others realize their full potential. Let's connect on LinkedIn to start a conversation about how we can collaborate and make a significant impact together.</p>
-</div>
-</div>
-</div>
-<section id="contact" class="section-padding">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h2>Contact</h2>
-        <p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
-        <div class="row">
-          <div class="col-md-8 offset-md-2">
-            <form action="https://formspree.io/f/xjvqbbvn" method="POST">
-              <div class="form-group">
-                <label for="name">First Name</label>
-                <input type="text" class="form-control" id="name" name="name" required>
-              </div>
-              <div class="form-group">
-                <label for="last-name">Last Name</label>
-                <input type="text" class="form-control" id="last-name" name="last-name" required>
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-              </div>
-              <div class="form-group">
-                <label for="message">Message</label>
-                <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<main>
+  <section id="under-construction" style="text-align: center; padding: 50px;">
+    <h2>Site Under Reconstruction</h2>
+    <p>Stay tuned for updates!</p>
+  </section>
 </main>
+
 
 <!-- Footer -->
 <footer class="footer" style="background-color: #333;">
