--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 			</button>
 			
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="resume.html">Resume</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="projects.html">Projects</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="opportunities.html">Opportunities</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="privacy.html">Privacy</a>
-					</li>
-				</ul>
-			</div>
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <span class="nav-link-disabled">Resume</span>
+    </li>
+    <li class="nav-item">
+      <span class="nav-link-disabled">Projects</span>
+    </li>
+    <li class="nav-item">
+      <span class="nav-link-disabled">Opportunities</span>
+    </li>
+    <li class="nav-item">
+      <span class="nav-link-disabled">Privacy</span>
+    </li>
+  </ul>
+</div>
 		</div>
 	</nav>
 </header>
